crates/rr-core/tests/snapshots/tags_fixture__c_surface.snap
---
source: crates/rr-core/tests/tags_fixture.rs
expression: "to_snapshot(\"surface.c\", &facts)"
---
path: surface.c
status: tags(parse_errors=false)
defs:
  - name: Server
    local_qualified: ~
    kind: type-alias
    visibility: public
    start_line: 4
    end_line: 6
    signature: "} Server;"
    signature_idents: []
    body_idents: []
    doc_idents: []
    attribute_idents:
      - typedef
      - struct
      - int
      - count
  - name: Mode
    local_qualified: ~
    kind: type-alias
    visibility: public
    start_line: 10
    end_line: 10
    signature: "enum Mode { FAST, SLOW }"
    signature_idents:
      - enum
      - FAST
      - SLOW
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: hidden
    local_qualified: ~
    kind: function
    visibility: public
    start_line: 12
    end_line: 12
    signature: hidden(void)
    signature_idents:
      - void
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: run
    local_qualified: ~
    kind: function
    visibility: public
    start_line: 16
    end_line: 16
    signature: run(Server *server)
    signature_idents:
      - Server
      - server
    body_idents: []
    doc_idents: []
    attribute_idents: []
references: []
imports:
  - kind: Include
    path: "<stdio.h>"
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 1
    owner: ~
  - kind: Include
    path: local.h
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 2
    owner: ~
