crates/rr-core/tests/snapshots/tags_fixture__cpp_imports.snap
---
source: crates/rr-core/tests/tags_fixture.rs
expression: "to_snapshot(\"imports.cpp\", &facts)"
---
path: imports.cpp
status: tags(parse_errors=false)
defs: []
references: []
imports:
  - kind: Include
    path: "<string>"
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 1
    owner: ~
  - kind: Include
    path: local.h
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 2
    owner: ~
