crates/rr-core/tests/snapshots/tags_fixture__cpp_surface.snap
---
source: crates/rr-core/tests/tags_fixture.rs
expression: "to_snapshot(\"surface.cpp\", &facts)"
---
path: surface.cpp
status: tags(parse_errors=false)
defs:
  - name: Service
    local_qualified: ~
    kind: class
    visibility: public
    start_line: 5
    end_line: 12
    signature: "class Service {"
    signature_idents:
      - class
    body_idents:
      - public
      - void
      - private
      - int
      - secret
    doc_idents: []
    attribute_idents: []
  - name: Service
    local_qualified: Service.Service
    kind: function
    visibility: public
    start_line: 7
    end_line: 7
    signature: Service()
    signature_idents: []
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: run
    local_qualified: Service.run
    kind: function
    visibility: public
    start_line: 8
    end_line: 8
    signature: run()
    signature_idents: []
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: run
    local_qualified: ~
    kind: method
    visibility: public
    start_line: 14
    end_line: 14
    signature: "Service::run()"
    signature_idents:
      - Service
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Point
    local_qualified: ~
    kind: class
    visibility: public
    start_line: 16
    end_line: 19
    signature: "struct Point {"
    signature_idents:
      - struct
    body_idents:
      - int
      - x
      - int
      - y
    doc_idents: []
    attribute_idents: []
  - name: identity
    local_qualified: ~
    kind: function
    visibility: public
    start_line: 22
    end_line: 22
    signature: identity(T value)
    signature_idents:
      - T
      - value
    body_idents: []
    doc_idents: []
    attribute_idents: []
references: []
imports:
  - kind: Include
    path: "<string>"
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 1
    owner: ~
  - kind: Include
    path: local.h
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 2
    owner: ~
