crates/rr-core/tests/snapshots/tags_fixture__csharp_surface.snap
---
source: crates/rr-core/tests/tags_fixture.rs
expression: "to_snapshot(\"surface.cs\", &facts)"
---
path: surface.cs
status: tags(parse_errors=false)
defs:
  - name: App.Core
    local_qualified: ~
    kind: module
    visibility: public
    start_line: 6
    end_line: 6
    signature: namespace App.Core;
    signature_idents:
      - namespace
      - App
      - Core
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Converter
    local_qualified: ~
    kind: type-alias
    visibility: public
    start_line: 8
    end_line: 8
    signature: public delegate int Converter(string input);
    signature_idents:
      - public
      - delegate
      - int
      - string
      - input
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Service
    local_qualified: ~
    kind: class
    visibility: public
    start_line: 10
    end_line: 37
    signature: "public class Service : IService"
    signature_idents:
      - public
      - class
      - IService
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: secret
    local_qualified: Service.secret
    kind: field
    visibility: private
    start_line: 12
    end_line: 12
    signature: private int secret;
    signature_idents:
      - private
      - int
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: unitField
    local_qualified: Service.unitField
    kind: field
    visibility: internal
    start_line: 13
    end_line: 13
    signature: internal int unitField;
    signature_idents:
      - internal
      - int
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: inherited
    local_qualified: Service.inherited
    kind: field
    visibility: protected
    start_line: 14
    end_line: 14
    signature: protected int inherited;
    signature_idents:
      - protected
      - int
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Max
    local_qualified: Service.Max
    kind: field
    visibility: public
    start_line: 15
    end_line: 15
    signature: public static readonly int Max = 3;
    signature_idents:
      - public
      - static
      - readonly
      - int
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Changed
    local_qualified: Service.Changed
    kind: field
    visibility: public
    start_line: 16
    end_line: 16
    signature: public event EventHandler Changed;
    signature_idents:
      - public
      - event
      - EventHandler
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Service
    local_qualified: Service.Service
    kind: constructor
    visibility: public
    start_line: 18
    end_line: 21
    signature: public Service(string name)
    signature_idents:
      - public
      - string
      - name
    body_idents:
      - helper
    doc_idents: []
    attribute_idents: []
  - name: Count
    local_qualified: Service.Count
    kind: property
    visibility: public
    start_line: 23
    end_line: 23
    signature: "public int Count { get; set; }"
    signature_idents:
      - public
      - int
      - get
      - set
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Run
    local_qualified: Service.Run
    kind: method
    visibility: public
    start_line: 25
    end_line: 31
    signature: public void Run()
    signature_idents:
      - public
      - void
    body_idents:
      - var
      - order
      - new
      - Order
      - order
      - Ship
      - int
      - total
      - Compute
    doc_idents: []
    attribute_idents: []
  - name: Add
    local_qualified: Service.Run.Add
    kind: function
    visibility: private
    start_line: 30
    end_line: 30
    signature: "int Add(int a, int b) => a + b;"
    signature_idents:
      - int
      - int
      - a
      - int
      - b
      - a
      - b
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: helper
    local_qualified: Service.helper
    kind: method
    visibility: private
    start_line: 33
    end_line: 33
    signature: "private void helper() {}"
    signature_idents:
      - private
      - void
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: ATest
    local_qualified: Service.ATest
    kind: method
    visibility: public
    start_line: 35
    end_line: 36
    signature: "public void ATest() {}"
    signature_idents:
      - public
      - void
    body_idents: []
    doc_idents: []
    attribute_idents:
      - Fact
  - name: Point
    local_qualified: ~
    kind: struct
    visibility: public
    start_line: 39
    end_line: 42
    signature: public struct Point
    signature_idents:
      - public
      - struct
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: X
    local_qualified: Point.X
    kind: field
    visibility: public
    start_line: 41
    end_line: 41
    signature: public int X;
    signature_idents:
      - public
      - int
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Model
    local_qualified: ~
    kind: class
    visibility: public
    start_line: 44
    end_line: 44
    signature: "public record Model(int Id, string Name);"
    signature_idents:
      - public
      - record
      - int
      - Id
      - string
      - Name
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Pair
    local_qualified: ~
    kind: class
    visibility: public
    start_line: 46
    end_line: 46
    signature: "public record struct Pair(int Left, int Right);"
    signature_idents:
      - public
      - record
      - struct
      - int
      - Left
      - int
      - Right
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: IService
    local_qualified: ~
    kind: interface
    visibility: public
    start_line: 48
    end_line: 53
    signature: public interface IService
    signature_idents:
      - public
      - interface
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Run
    local_qualified: IService.Run
    kind: method
    visibility: public
    start_line: 50
    end_line: 50
    signature: void Run();
    signature_idents:
      - void
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Size
    local_qualified: IService.Size
    kind: property
    visibility: public
    start_line: 51
    end_line: 51
    signature: "int Size { get; }"
    signature_idents:
      - int
      - get
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Trace
    local_qualified: IService.Trace
    kind: method
    visibility: private
    start_line: 52
    end_line: 52
    signature: "private void Trace() {}"
    signature_idents:
      - private
      - void
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Mode
    local_qualified: ~
    kind: enum
    visibility: public
    start_line: 55
    end_line: 59
    signature: public enum Mode
    signature_idents:
      - public
      - enum
    body_idents:
      - Fast
      - Slow
    doc_idents: []
    attribute_idents: []
  - name: Repo
    local_qualified: ~
    kind: class
    visibility: public
    start_line: 61
    end_line: 69
    signature: "public class Repo : System.Collections.Generic.List<int>"
    signature_idents:
      - public
      - class
      - System
      - Collections
      - Generic
      - List
      - int
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Load
    local_qualified: Repo.Load
    kind: method
    visibility: public
    start_line: 63
    end_line: 68
    signature: public void Load()
    signature_idents:
      - public
      - void
    body_idents:
      - var
      - buffer
      - new
      - IO
      - MemoryStream
      - var
      - page
      - Fetch
      - int
      - this
      - Emit
      - int
      - page
    doc_idents: []
    attribute_idents: []
  - name: Box
    local_qualified: ~
    kind: class
    visibility: public
    start_line: 71
    end_line: 74
    signature: "public class Box : Repo"
    signature_idents:
      - public
      - class
      - Repo
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Drop
    local_qualified: Box.Drop
    kind: method
    visibility: public
    start_line: 73
    end_line: 73
    signature: "[Obsolete(\"keep until 2 (the next major\")] public void Drop() {}"
    signature_idents:
      - Obsolete
      - keep
      - until
      - the
      - next
      - major
      - public
      - void
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: App.Legacy
    local_qualified: ~
    kind: module
    visibility: public
    start_line: 76
    end_line: 82
    signature: namespace App.Legacy
    signature_idents:
      - namespace
      - App
      - Legacy
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: LegacyGate
    local_qualified: App.Legacy.LegacyGate
    kind: class
    visibility: public
    start_line: 78
    end_line: 81
    signature: public class LegacyGate
    signature_idents:
      - public
      - class
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Serve
    local_qualified: App.Legacy.LegacyGate.Serve
    kind: method
    visibility: public
    start_line: 80
    end_line: 80
    signature: "public void Serve() {}"
    signature_idents:
      - public
      - void
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Hidden
    local_qualified: ~
    kind: class
    visibility: internal
    start_line: 84
    end_line: 92
    signature: class Hidden
    signature_idents:
      - class
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Tick
    local_qualified: Hidden.Tick
    kind: method
    visibility: private
    start_line: 86
    end_line: 86
    signature: "void Tick() {}"
    signature_idents:
      - void
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Inner
    local_qualified: Hidden.Inner
    kind: class
    visibility: private
    start_line: 88
    end_line: 91
    signature: class Inner
    signature_idents:
      - class
    body_idents: []
    doc_idents: []
    attribute_idents: []
  - name: Beat
    local_qualified: Hidden.Inner.Beat
    kind: method
    visibility: private
    start_line: 90
    end_line: 90
    signature: "void Beat() {}"
    signature_idents:
      - void
    body_idents: []
    doc_idents: []
    attribute_idents: []
references:
  - name: IService
    kind: implementation
    line: 10
    owner: Service
  - name: helper
    kind: call
    line: 20
    owner: Service
  - name: Order
    kind: type
    line: 27
    owner: Run
  - name: Ship
    kind: methodcall
    line: 28
    owner: Run
  - name: Compute
    kind: call
    line: 29
    owner: Run
  - name: List
    kind: implementation
    line: 61
    owner: Repo
  - name: MemoryStream
    kind: type
    line: 65
    owner: Load
  - name: Fetch
    kind: call
    line: 66
    owner: Load
  - name: Emit
    kind: methodcall
    line: 67
    owner: Load
  - name: Repo
    kind: implementation
    line: 71
    owner: Box
imports:
  - kind: Import
    path: System
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 1
    owner: ~
  - kind: Import
    path: System.Collections.Generic
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 2
    owner: ~
  - kind: Import
    path: System.IO
    name: ~
    alias: IO
    is_public: false
    is_glob: false
    line: 3
    owner: ~
  - kind: Import
    path: System.Linq
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 4
    owner: ~
