crates/rr-core/tests/snapshots/tags_fixture__go_surface.snap
---
source: crates/rr-core/tests/tags_fixture.rs
expression: "to_snapshot(\"surface.go\", &facts)"
---
path: surface.go
status: tags(parse_errors=false)
defs:
  - name: Server
    local_qualified: ~
    kind: type-alias
    visibility: public
    start_line: 4
    end_line: 6
    signature: "Server struct {"
    signature_idents:
      - struct
    body_idents:
      - Name
      - string
    doc_idents: []
    attribute_idents: []
  - name: Runner
    local_qualified: ~
    kind: type-alias
    visibility: public
    start_line: 9
    end_line: 11
    signature: "Runner interface {"
    signature_idents:
      - interface
    body_idents:
      - Run
      - error
    doc_idents: []
    attribute_idents: []
  - name: NewServer
    local_qualified: ~
    kind: function
    visibility: public
    start_line: 17
    end_line: 20
    signature: "func NewServer(name string) *Server {"
    signature_idents:
      - func
      - name
      - string
      - Server
    body_idents:
      - return
      - Server
      - Name
      - name
    doc_idents:
      - NewServer
      - is
      - the
      - exported
      - constructor
    attribute_idents: []
  - name: Run
    local_qualified: ~
    kind: method
    visibility: public
    start_line: 22
    end_line: 24
    signature: "func (s *Server) Run() error {"
    signature_idents:
      - func
      - s
      - Server
      - error
    body_idents:
      - return
      - helper
      - s
      - Name
    doc_idents: []
    attribute_idents: []
  - name: hidden
    local_qualified: ~
    kind: function
    visibility: package
    start_line: 26
    end_line: 26
    signature: "func hidden() {}"
    signature_idents:
      - func
    body_idents: []
    doc_idents: []
    attribute_idents: []
references:
  - name: string
    kind: type
    line: 5
    owner: Server
  - name: error
    kind: type
    line: 10
    owner: Runner
  - name: string
    kind: type
    line: 18
    owner: NewServer
  - name: Server
    kind: type
    line: 18
    owner: NewServer
  - name: Server
    kind: type
    line: 19
    owner: NewServer
  - name: Server
    kind: type
    line: 22
    owner: Run
  - name: error
    kind: type
    line: 22
    owner: Run
  - name: helper
    kind: call
    line: 23
    owner: Run
imports: []
