crates/rr-core/tests/snapshots/tags_fixture__javascript_imports.snap
---
source: crates/rr-core/tests/tags_fixture.rs
expression: "to_snapshot(\"imports.js\", &facts)"
---
path: imports.js
status: tags(parse_errors=false)
defs: []
references: []
imports:
  - kind: Import
    path: "./d.js"
    name: ~
    alias: def
    is_public: false
    is_glob: false
    line: 1
    owner: ~
  - kind: Import
    path: ns
    name: ~
    alias: ns
    is_public: false
    is_glob: false
    line: 2
    owner: ~
  - kind: From
    path: lib
    name: a
    alias: ~
    is_public: false
    is_glob: false
    line: 3
    owner: ~
  - kind: From
    path: lib
    name: b
    alias: c
    is_public: false
    is_glob: false
    line: 3
    owner: ~
  - kind: Import
    path: "./side"
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 4
    owner: ~
  - kind: Require
    path: fs
    name: ~
    alias: ~
    is_public: false
    is_glob: false
    line: 5
    owner: ~
  - kind: From
    path: reex
    name: x
    alias: ~
    is_public: true
    is_glob: false
    line: 6
    owner: ~
  - kind: From
    path: reex
    name: y
    alias: z
    is_public: true
    is_glob: false
    line: 6
    owner: ~
  - kind: From
    path: star
    name: ~
    alias: ~
    is_public: true
    is_glob: true
    line: 7
    owner: ~
  - kind: Import
    path: starns
    name: ~
    alias: all
    is_public: true
    is_glob: false
    line: 8
    owner: ~
